--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,3 +1,10 @@
-<p>
-  home works!
-</p>
+<div class="col-md-4 ml-md-auto" *ngIf="!cargado">
+    <p>Cargando...</p>
+    <img class="center" src="https://i.emezeta.com/weblog/nyan-cat/nyan-cat-animated.gif" alt="">
+</div>
+<div class="col-12" *ngIf="cargado">
+    <p> Total Resultados : {{ todo.totalResults }} </p>
+    <ul>
+      <li *ngFor="let usuario of todo.results"> {{ usuario.name }} - {{usuario.email}}</li>
+    </ul>
+</div>
