--- a/src/app/componentes/home/home.component.css
+++ b/src/app/componentes/home/home.component.css
@@ -1,12 +1,44 @@
 .imagen {
-    overflow: hidden;
-    object-fit: cover;
+overflow: hidden;
+object-fit: cover;
+}
+
+.card-img-top {
+transition: transform 0.1s ease;
+}
+
+.imagen:hover .card-img-top {
+    -webkit-transform: rotate(5deg) scale(1.3);
+
+}
+@media screen and (min-width: 1200px) {
+    .card-columns {
+        -webkit-column-count: 5;
+        -moz-column-count: 5;
+        column-count: 5;
     }
-    
-    .card-img-top {
-    transition: transform 0.1s ease;
+  }
+  
+/* On screens that are 600px or less, set the background color to olive */
+@media screen and (max-width: 1200px) {
+    .card-columns {
+        -webkit-column-count: 4;
+        -moz-column-count: 4;
+        column-count: 4;
     }
-    
-    .imagen:hover .card-img-top {
-    transform: scale(1.2);
+}
+@media screen and (max-width: 770px) {
+    .card-columns {
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
+        column-count: 3;
     }
+}
+@media screen and (max-width: 580px) {
+    .card-columns {
+        -webkit-column-count: 1;
+        -moz-column-count: 1;
+        column-count: 1;
+        margin: 15px;
+    }
+}
